# libpcreplusplus

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  libtool  pcre++-config.in
autom4te.cache/: output.0  requests  traces.0
debian/: README.Debian  changelog  control  copyright  libpcre++-dev.install  watch
debian/patches/: 01-makefiles.patch  series
doc/: .doxygen  Makefile.am  Makefile.in  Pcre.3
doc/html/: annotated.html  classPcre-members.html  classPcre.html  classPcre_1_1exception-members.html  classPcre_1_1exception.html  classpcrepp_1_1Pcre-members.html  classpcrepp_1_1Pcre.html  classpcrepp_1_1Pcre_1_1exception-members.html  classpcrepp_1_1Pcre_1_1exception.html  files.html  functions.html  get_8cc-source.html  get_8cc.html  globals.html  index.html  namespacepcrepp.html  namespaces.html  namespacestd.html  pcre++_8cc-source.html  pcre++_8cc.html  pcre++_8h-source.html  pcre++_8h.html  replace_8cc-source.html  replace_8cc.html  search_8cc-source.html  search_8cc.html  split_8cc-source.html  split_8cc.html
doc/man/man3/: Pcre.3  Pcre_exception.3  get.cc.3  pcre__.cc.3  pcre__.h.3  pcrepp.3  pcrepp_Pcre.3  pcrepp_Pcre_exception.3  replace.cc.3  search.cc.3  split.cc.3  std.3
examples/: Makefile.am  Makefile.in  demo.cc  replace_demo.cc  search_demo.cc
libpcre++/: Makefile.in  config.h.in
test/: Makefile.am  Makefile.in  t.cc  test.cc  testinput
